test/test_units/test_kclvm/test_types/invalid_test_data/for_comp/for_comp_1.k
data = [[1, 2], [3, 4]]
# Error: list unpacking cannot be used in list comprehension
dataNew = [*i for i in data]
